clamp() used to replace min()&max() combo